force-app/main/default/objects/Verbal_Consent__c/Verbal_Consent__c.object-meta.xml
<CustomObject>
    <description>This object will holds the verbal consents records</description>
    <label>Verbal Consent</label>
    <nameField>
        <displayFormat>VC-{0000}</displayFormat>
        <label>Verbal Consent ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verbal Consents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>