force-app/main/default/objects/Verbal_Consent__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This filed will give the information about the verbal consents whether it is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>