force-app/main/default/objects/Verbal_Consent__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field will contains description value for verbal consents</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>