force-app/main/default/objects/Verbal_Consent__c/fields/Place_Holder__c.field-meta.xml
<CustomField>
    <fullName>Place_Holder__c</fullName>
    <description>This filed will contains the picklist value</description>
    <label>Place Holder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>nuHome nuCard SUB</fullName>
            </value>
            <value>
                <fullName>nuHome nuCard SPEC</fullName>
            </value>
            <value>
                <fullName>nuHome nuCard CPL</fullName>
            </value>
            <value>
                <fullName>nuHome Door Tag Script</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>