force-app/main/default/objects/Verbal_Consent__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>This field will contains the version number of the verbal consents</description>
    <label>Version</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>